--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,30 +6,10 @@
 * {
     padding: 0;
     margin: 0;
-    /*box-sizing: border-box;*/
     font-size: 10px;
 }
 
-body {
-    min-height: 650px;
-    display: grid;
-    grid-template-areas: "header header header"
-        "gallery gallery gallery"
-        "gallery gallery gallery"
-        "gallery gallery gallery"
-        "footer footer footer"
-    ;
-    background-image: url(https://i.pinimg.com/originals/19/08/61/190861bdbb239b0f334f2677d406d6f8.jpg);
-    background-attachment: fixed;
-}
-
-
-/* ---- ANIMACIONES ---- */
-.animaciones{
-    /*height: 40px;
-    margin: 1px;*/
-    align-items: center;
-}
+/* -------------------------------------------------- ANIMACIONES */
 .animaciones:hover{
     animation: cambioTamaño 2s;
 }
@@ -47,75 +27,32 @@ body {
         color: rgb(55, 55, 55);
     }
 }
-/* ---- ANIMACIONES ---- */
+/* ---- fin ANIMACIONES ---- */
 
 
-/* ---- empieza HEADER ---- */
-header {
-    grid-area: header;
-    height: 75px;
-    display: flex;
-    justify-content: space-around;
-    background-color: rgba(0, 0, 0, 0.877);
-    position: sticky;
-    top: 0;
-    -webkit-box-shadow: 2px 8px 35px -16px rgba(0,0,0,0.75);
--moz-box-shadow: 2px 8px 35px -16px rgba(0,0,0,0.75);
-box-shadow: 2px 8px 35px -16px rgba(0,0,0,0.75);
-}
 
+/* ------------------------------------------------ empieza HEADER */
 /* ---- logo ---- */
-.container-logo {
-    width: 35%;
-    margin: auto;
-    background-color: rgba(255, 255, 255, 0.836);
-    border-radius: 30px;
-    display: flex;
-    justify-content: center;
-}
-
-.logo {
-    font-size: 40px;
-    font-family: 'Plus Jakarta Sans', sans-serif;
-    font-weight: 700;
-    color: rgb(0, 0, 0);
-}
-
-/* ---- fin logo ---- */
-/* ---- menu ---- */
-.container-menu {
-    width: 50%;
-    margin: auto;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.container-lista {
-    list-style: none;
-    display: flex;
-}
-
-ul li {
-    font-family: 'Plus Jakarta Sans', sans-serif;
-    font-weight: 600;
-    display: inline;
-    padding: 15px;
-}
-
-ul li a {
-    font-size: 15px;
-    color: blanchedalmond;
+.logo{
+    color:rgba(255, 255, 255, 0.5);
+    font-size: 4rem;
     text-decoration: none;
-    font-weight: 700;
+}
+.logo:hover{
+    text-decoration: none;
+    color: darkgoldenrod;
+}
+/* ---- fin HEADER ----*/
+
+
+/* ----------------------------------------------------- CARUSEL */
+.container-carousel{
+    width: 40%;
+    margin: auto;
 }
 
-/* ---- fin menu ---- */
-/* ---- termina HEADER ---- */
 
-
-
-
-/* ---- empieza MAIN HOME ---- */
+/* -------------------------------------------- empieza MAIN HOME */
 /* ---- contenedor graleria ----*/
 .grid-container {
     grid-area: gallery;
@@ -157,13 +94,13 @@ h3{
     box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
     gap: 10px;
 }
-/* ---- termina MAIN HOME--- */
+/* ---- fin MAIN HOME--- */
 
 
 
 
 
-/* ---- empieza MAIN DAMA y BARBERIA ---- */
+/* ----------------------------------- empieza MAIN DAMA y BARBERIA */
 .container-dama {
     grid-area: gallery;
     display: grid;
@@ -190,12 +127,12 @@ h3{
     justify-items: end;
     align-items: center;
 }
-/* ---- termina MAIN DAMA y BARBERIA---- */
+/* ---- fin MAIN DAMA y BARBERIA---- */
 
 
 
 
-/* ---- empieza MAIN TURNOS ---- */
+/* -------------------------------------------- empieza MAIN TURNOS */
 .contenedorItemTurnos{
     width: 90vw;
     margin: auto;
@@ -219,7 +156,7 @@ h3{
 
 
 
-/* ---- comienza MAIN NOSOTROS ---- */
+/* --------------------------------------- comienza MAIN NOSOTROS */
 .contenedorNosotros{
     margin: auto;
     display: flex;
@@ -235,16 +172,16 @@ h3{
 
 
 
-/* ----------------- empieza FOOTER ----------------- */
+/* ----------------------------------------------- empieza FOOTER */
 footer {
     grid-area: footer;
-    background-color: rgba(61, 61, 61, 0.918);
+    background-color: rgba(0, 0, 0, 0.707);
     height: 65px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
-/* ----------------- frase derecho autor ----------------- */
+/* ---- frase derecho autor ---- */
 .copyright {
     font-family: 'Plus Jakarta Sans', sans-serif;
     width: 40%;
@@ -258,7 +195,7 @@ footer {
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-size: 2rem;
     font-weight: 300;
-    color: blanchedalmond;
+    color: rgb(255, 255, 255);
 }
 
 .redsocial-container {
@@ -278,20 +215,15 @@ footer {
 .redsocial-item-whatsapp {
     height: 3rem;
 }
-/* ---- termina FOOTER ---- */
+/* ---- fin FOOTER ---- */
 
 
 
 
 
-
-/* ---- MEDIA QUERIES INDEX ----*/
-/* ---- mobile ----*/
+/*-------------------------------------- MEDIA QUERIES INDEX */
+/*---- mobile ----*/
 @media screen and (max-width:340px) {
-    header{
-        display: flex;
-        flex-direction: column;
-    }
     .grid-container {
         display: grid;
         grid-template-columns: 1fr;
@@ -310,15 +242,17 @@ footer {
     .copyright-item{
         font-size: 10px;
     }
+    .container-carousel{
+        width: 100%;
+    }
+    .animaciones:hover{
+        animation: none;
+    }
 }
 /* ---- fin mobile ----*/
 
 /* ---- tablet ----*/
 @media screen and (min-width:341px) and (max-width:960px) {
-    header{
-        display: flex;
-        flex-direction: column;
-    }
     .grid-container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -330,6 +264,12 @@ footer {
     .copyright-item{
         font-size: 5px;
     }
+    .container-carousel{
+        width: 60%;
+    }
+    .animaciones:hover{
+        animation: none;
+    }
 }
 /* ---- fin tablet ----*/
 /* ---- fin media queries INDEX ----*/
@@ -337,11 +277,7 @@ footer {
 
 /* ---- MEDIA QUERIES DAMAS y BARBERIA----*/
 /* ---- mobile ----*/
-@media screen and (max-width:340px) {
-    header{
-        display: flex;
-        flex-direction: column;
-    }
+@media screen and (max-width:340x) {
     .container-dama {
         display: grid;
         grid-template-columns: 1fr;
@@ -366,10 +302,6 @@ footer {
 
 /* ---- tablet ----*/
 @media screen and (min-width:341px) and (max-width:960px) {
-    header{
-        display: flex;
-        flex-direction: column;
-    }
     .container-dama {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -399,10 +331,6 @@ footer {
 /* ---- MEDIA QUERIES TURNOS ----*/
 /* ---- mobile ----*/
 @media screen and (max-width:340px) {
-    header{
-        display: flex;
-        flex-direction: column;
-    }
     .parrafo {
         font-size: 15px;
         text-align: center;
@@ -415,10 +343,6 @@ footer {
 
 /* ---- tablet ----*/
 @media screen and (min-width:341px) and (max-width:960px) {
-    header{
-        display: flex;
-        flex-direction: column;
-    }
     .parrafo{
         font-size: 20px;
     }
@@ -433,10 +357,6 @@ footer {
 /* ---- MEDIA QUERIES NOSOTROS ----*/
 /* ---- mobile ----*/
 @media screen and (max-width:340px) {
-    header{
-        display: flex;
-        flex-direction: column;
-    }
     .parrafo {
         font-size: 15px;
         text-align: center;
@@ -453,10 +373,6 @@ footer {
 
 /* ---- tablet ----*/
 @media screen and (min-width:341px) and (max-width:960px) {
-    header{
-        display: flex;
-        flex-direction: column;
-    }
     .contenedorNosotros{
         display: flex;
         flex-direction: column;
