--- a/css/estilo.css
+++ b/css/estilo.css
@@ -15,16 +15,16 @@
 }
 @keyframes cambioTamaño {
     0%{ background-color: rgba(205, 205, 205, 0.500);
-        font-size: 2.6rem;
-        color: rgba(35, 35, 35, 0.983);
+        font-size: 3.7rem;
+        color: rgba(123, 0, 0, 0.983);
     }
     50%{background-color: rgba(205, 205, 205, 0.500);
-        font-size: 2.8rem;
-        color: rgb(49, 49, 49);
+        font-size: 4rem;
+        color: rgba(123, 0, 0, 0.983);
     }
     100%{background-color: rgba(205, 205, 205, 0.500);
-        font-size: 3rem;
-        color: rgb(55, 55, 55);
+        font-size: 4.5rem;
+        color: rgba(123, 0, 0, 0.983);
     }
 }
 /* ---- fin ANIMACIONES ---- */
@@ -47,48 +47,33 @@
 
 /* ----------------------------------------------------- CARUSEL */
 .container-carousel{
-    width: 40%;
+    width: 50%;
     margin: auto;
 }
 
 
 /* -------------------------------------------- empieza MAIN HOME */
-/* ---- contenedor graleria ----*/
-.grid-container {
-    grid-area: gallery;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: 300px;
-    gap: 15px;
-}
-/* ---- primer contenedor galeria ----*/
 h2 {
     font-family: 'Inconsolata', monospace;
-    font-size: 2.5rem;
+    font-size: 3.7rem;
     font-weight: 900;
 }
 h3{
     font-family: 'Inconsolata', monospace;
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     font-weight: 600;
 }
-.lookeate-item {
-    margin: auto;
-    text-align: center;
+h4{
+    font-family: 'Inconsolata', monospace;
+    font-size: 2.7rem;
+    font-weight: 600;
 }
- /* ----  contenedor foto chica pelo en la cara ----*/
-.imagen3 {   
-    grid-row-start: span 2;
-}
-/* ----  contenedor foto hombre barba ----*/
-.imagen4 {    
-    grid-row-start: span 2;
-}
+
 /* ---- fotos ----*/
 .gallery-imagen {  
-    width: 100%;
-    height: 100%;
-    object-fit: fill;   
+    width: 80%;
+    height: 80%;
+    object-fit: contain;   
     -webkit-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
     box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
@@ -101,18 +86,7 @@ h3{
 
 
 /* ----------------------------------- empieza MAIN DAMA y BARBERIA */
-.container-dama {
-    grid-area: gallery;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px;
-}
-.item {
-    height: 420px;
-    overflow: hidden;
-    display: flex;
-}
+
 .damas-imagen {
     width: 50%;
     -webkit-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
@@ -120,13 +94,7 @@ h3{
     box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
     gap: 10px;
 }
-.parrafo {
-    font-family: 'Inconsolata', monospace;
-    font-size: 30px;
-    font-weight: 800;
-    justify-items: end;
-    align-items: center;
-}
+
 /* ---- fin MAIN DAMA y BARBERIA---- */
 
 
@@ -218,171 +186,38 @@ footer {
 /* ---- fin FOOTER ---- */
 
 
+/* ----------------------------------------------- empieza MEDIA QUERIES */
+/*  mobile */
+@media screen and (max-width:580px) {
+    h2{
+        font-size: 2rem;
+    }
+    h3{
+        font-size: 1.7rem;
+    }
+    h4{
+        font-size: 1.5rem;
+    }
 
+    .logo{
+        font-size: 2.2rem;
+    }
+   .gallery-imagen{
 
+   }
+    
+}
 
-/*-------------------------------------- MEDIA QUERIES INDEX */
-/*---- mobile ----*/
-@media screen and (max-width:340px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: 1fr;
+/* tablet */
+@media screen and (min-width:581px) and (max-width:990px) {
+    h2{
+        font-size: 3rem;
     }
-    .logo {
-        font-size: 20px;
-        text-align: center;
+    h3{
+        font-size: 2.5rem;
     }
-    .lookeate-item {
-        font-size: 25px;
-    }
-    footer{
-        display: flex;
-        flex-direction: column;
-    }
-    .copyright-item{
-        font-size: 10px;
-    }
-    .container-carousel{
-        width: 100%;
-    }
-    .animaciones:hover{
-        animation: none;
+    h4{
+        font-size: 1.7rem;
     }
 }
-/* ---- fin mobile ----*/
 
-/* ---- tablet ----*/
-@media screen and (min-width:341px) and (max-width:960px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .logo {
-        font-size: 20px;
-        text-align: center;
-    }
-    .copyright-item{
-        font-size: 5px;
-    }
-    .container-carousel{
-        width: 60%;
-    }
-    .animaciones:hover{
-        animation: none;
-    }
-}
-/* ---- fin tablet ----*/
-/* ---- fin media queries INDEX ----*/
-
-
-/* ---- MEDIA QUERIES DAMAS y BARBERIA----*/
-/* ---- mobile ----*/
-@media screen and (max-width:340x) {
-    .container-dama {
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-    .logo {
-        font-size: 20px;
-        text-align: center;
-    }
-    .damas-imagen {
-        width: 100%;
-        height: 100%;
-    }
-    .parrafo {
-        font-size: 15px;
-        text-align: center;
-    }
-    .copyright-item{
-        font-size: 10px;
-    }
-}
-/* ---- fin mobile ----*/
-
-/* ---- tablet ----*/
-@media screen and (min-width:341px) and (max-width:960px) {
-    .container-dama {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .logo {
-        font-size: 20px;
-        text-align: center;
-    }
-    .damas-imagen {
-        width: 100%;
-        height: 100%;
-    }
-    .parrafo {
-        font-size: 15px;
-        text-align: center;
-    }
-    .copyright-item{
-        font-size: 10px;
-    }
-}
-/* ---- fin tablet ----*/
-/* ---- fin media queries DAMAS y BARBERIA ----*/
-
-
-
-
-/* ---- MEDIA QUERIES TURNOS ----*/
-/* ---- mobile ----*/
-@media screen and (max-width:340px) {
-    .parrafo {
-        font-size: 15px;
-        text-align: center;
-    }
-    .copyright-item{
-        font-size: 10px;
-    }
-}
-/* ---- fin mobile ----*/
-
-/* ---- tablet ----*/
-@media screen and (min-width:341px) and (max-width:960px) {
-    .parrafo{
-        font-size: 20px;
-    }
-    .copyright-item{
-        font-size: 15px;
-    }
-}
-/* ---- fin tablet ----*/
-/* ---- fin MEDIA QUERIES TURNOS ----*/
-
-
-/* ---- MEDIA QUERIES NOSOTROS ----*/
-/* ---- mobile ----*/
-@media screen and (max-width:340px) {
-    .parrafo {
-        font-size: 15px;
-        text-align: center;
-    }
-    .copyright-item{
-        font-size: 10px;
-    }
-    .contenedorNosotros{
-        display: flex;
-        flex-direction: column;
-    }
-}
-/* ---- fin mobile ----*/
-
-/* ---- tablet ----*/
-@media screen and (min-width:341px) and (max-width:960px) {
-    .contenedorNosotros{
-        display: flex;
-        flex-direction: column;
-    }
-    .parrafo{
-        font-size: 20px;
-    }
-    .copyright-item{
-        font-size: 15px;
-    }
-}
-/* ---- fin tablet ----*/
-/* ---- fin MEDIA QUERIES NOSOTROS ----*/
