--- a/css/style.css
+++ b/css/style.css
@@ -46,17 +46,26 @@ body {
   /* tablet */
 }
 @media screen and (max-width: 350px) {
+  body h1 {
+    font: 2.6rem;
+  }
   body h2 {
-    font-size: 2.6rem;
+    font-size: 2.4rem;
   }
   body h3 {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
   }
   body h4 {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
   }
   body .logo {
     font-size: 3rem;
+  }
+  body .container {
+    margin: auto;
+  }
+  body .col {
+    margin: auto;
   }
 }
 @media screen and (min-width: 351px) and (max-width: 990px) {
@@ -96,7 +105,7 @@ footer .copyright {
 }
 footer .copyright .copyright-item {
   font-family: "Plus Jakarta Sans", sans-serif;
-  font-size: 2rem;
+  font-size: 1.6rem;
   font-weight: 300;
   color: rgb(254, 240, 229);
 }
