--- a/scss/base/_estilosGenerales.scss
+++ b/scss/base/_estilosGenerales.scss
@@ -47,18 +47,27 @@ body{
     /* ----------------------------------------------- empieza MEDIA QUERIES */
 /*  mobile */
 @media screen and (max-width:350px) {
+    h1{
+        font: 2.6rem;
+    }
     h2{
-        font-size: 2.6rem;
+        font-size: 2.4rem;
     }
     h3{
-        font-size: 2.5rem;
+        font-size: 2.3rem;
     }
     h4{
-        font-size: 2.5rem;
+        font-size: 2.3rem;
     }
 
     .logo{
         font-size: 3rem;
+    }
+    .container{
+        margin: auto;
+    }
+    .col{
+        margin: auto;
     }
 }
 
