modificacion estilo container animaciones

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,8 +3,8 @@
 @import "../scss/base/listas";
 
 // COMPONENTES
-@import "../scss/components/animaciones";
-@import "../scss/components/footer";
-@import "../scss/components/header"; 
-@import "../scss/components/carousel";
-@import "../scss/components/galeriaImagenes";
+@import "./components/animaciones";
+@import "./components/footer";
+@import "./components/header"; 
+@import "./components/carousel";
+@import "./components/galeriaImagenes";
