--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -1,4 +1,7 @@
 .container-carousel{
-    width: 60%;
+    width: 70%;
     margin: auto;
+    -webkit-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
+        box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
 }
