--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -1,7 +1,7 @@
 .container-carousel{
-    width: 70%;
+    width: 90%;
     margin: auto;
-    -webkit-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
-        -moz-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
-        box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px -24px 93px 8px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px -24px 93px 8px rgba(0,0,0,0.75);
+box-shadow: 0px -24px 93px 8px rgba(0,0,0,0.75);
 }
