--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 // BASE
 @import "../scss/base/estilosGenerales";
 @import "../scss/base/listas";
+@import "../scss/base/mapas";
 
 // COMPONENTES
 @import "../scss/components/animaciones";
