--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap");
 /* ---- font-family: 'Plus Jakarta Sans', sans-serif; ---- */
@@ -40,12 +39,14 @@ h4 {
 
 body {
   width: 100%;
-  background-color: rgb(254, 240, 229);
+  background-color: white;
   /* ----------------------------------------------- empieza MEDIA QUERIES */
   /*  mobile */
-  /* tablet */
 }
 @media screen and (max-width: 350px) {
+  body {
+    /* tablet */
+  }
   body h1 {
     font: 2.6rem;
   }
@@ -67,8 +68,11 @@ body {
   body .col {
     margin: auto;
   }
+  body .container-carousel {
+    width: 100%;
+  }
 }
-@media screen and (min-width: 351px) and (max-width: 990px) {
+@media screen and (max-width: 350px) and (min-width: 351px) and (max-width: 990px) {
   body h2 {
     font-size: 3rem;
   }
@@ -78,46 +82,27 @@ body {
   body h4 {
     font-size: 2rem;
   }
+  body .container-carousel {
+    width: 100%;
+  }
 }
 
 .animaciones {
   padding: 20px;
-  margin: 20px;
   text-align: center;
+  background-color: rgb(43, 41, 50);
 }
-.animaciones .animaciones-item {
-  border-radius: 40%;
-  background-color: rgb(198, 155, 123);
+.animaciones .animaciones-letras {
+  color: rgb(255, 248, 243);
   margin: 10px auto;
-  width: 35%;
-}
-.animaciones .animaciones-itemhover {
-  animation: cambioTamaño 2s;
 }
 
-.animaciones-item:hover {
-  animation: cambioTamaño 2s;
+.animaciones-letras:hover {
+  color: rgb(198, 155, 123);
 }
 
-@keyframes cambioTamaño {
-  0% {
-    background-color: rgba(205, 205, 205, 0.5);
-    font-size: 3.7rem;
-    color: rgba(123, 0, 0, 0.983);
-  }
-  50% {
-    background-color: rgba(205, 205, 205, 0.5);
-    font-size: 4rem;
-    color: rgba(123, 0, 0, 0.983);
-  }
-  100% {
-    background-color: rgba(205, 205, 205, 0.5);
-    font-size: 4.5rem;
-    color: rgba(123, 0, 0, 0.983);
-  }
-}
 .footer {
-  background-color: rgb(198, 155, 123);
+  background-color: rgb(0, 0, 0);
   max-height: 300px;
   display: flex;
   flex-wrap: wrap;
@@ -140,29 +125,30 @@ body {
   display: flex;
   justify-content: space-around;
   margin: 10px auto;
+  background-color: rgb(255, 248, 243);
 }
 .footer .redsocial-container a .redsocial-item {
   height: 4rem;
 }
 
 header .navbar .container-fluid .logo {
-  color: rgb(198, 155, 123);
-  font-size: 3.5rem;
+  color: rgb(255, 248, 243);
+  font-size: 3.1rem;
   text-decoration: none;
 }
 header .navbar .container-fluid .logo:hover {
-  color: rgb(254, 240, 229);
+  color: rgb(198, 155, 123);
 }
 header .navbar .container-fluid div div .nav-link {
   font-size: 1.7rem;
 }
 
 .container-carousel {
-  width: 70%;
+  width: 90%;
   margin: auto;
-  -webkit-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
-  box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px -24px 93px 8px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px -24px 93px 8px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px -24px 93px 8px rgba(0, 0, 0, 0.75);
 }
 
 .container {
@@ -193,6 +179,7 @@ header .navbar .container-fluid div div .nav-link {
   align-items: center;
   justify-content: space-around;
   margin: 30px auto;
+  background-color: rgb(43, 41, 50);
 }
 .marcas .marcas-item {
   margin: 20px;
