--- a/scss/components/_marcas.scss
+++ b/scss/components/_marcas.scss
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: space-around;
     margin: 30px auto;
+    background-color: nth($colores , 3 );
 
     .marcas-item{
         margin: 20px;
