--- a/css/style.css
+++ b/css/style.css
@@ -102,11 +102,11 @@ body {
 }
 
 .footer {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(43, 41, 50);
   max-height: 300px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .footer .copyright {
   width: 330px;
@@ -118,17 +118,18 @@ body {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-size: 1.6rem;
   font-weight: 300;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 248, 243);
 }
 .footer .redsocial-container {
   width: 330px;
   display: flex;
   justify-content: space-around;
   margin: 10px auto;
-  background-color: rgb(255, 248, 243);
 }
 .footer .redsocial-container a .redsocial-item {
   height: 4rem;
+  background-color: rgb(255, 248, 243);
+  padding: 5px;
 }
 
 header .navbar .container-fluid .logo {
