--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,8 @@
 @import "../scss/base/estilosGenerales";
 @import "../scss/base/listas";
 @import "../scss/base/mapas";
+@import "../scss/base/extend";
+@import "../scss/base/mixin";
 
 // COMPONENTES
 @import "../scss/components/animaciones";
