--- a/scss/components/_mainDamaBarberia.scss
+++ b/scss/components/_mainDamaBarberia.scss
@@ -5,3 +5,9 @@
     box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
     gap: 10px;
 }
+
+.titulo-damasCaballero{
+    margin: 10px;
+    text-align: center;
+    
+}
