--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap");
-/* ---- font-family: 'Plus Jakarta Sans', sans-serif; ---- */
-/* ----font-family: 'Inconsolata', monospace;---- */
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
+/* ---- font-family: 'Raleway', sans-serif; ---- */
 * {
   margin: 0;
   padding: 0;
@@ -10,29 +8,28 @@
 }
 
 h1 {
-  font-family: "Inconsolata", monospace;
-  font-size: 4.2rem;
-  font-weight: 900;
+  font-family: "Raleway", sans-serif;
+  font-size: 3rem;
+  font-weight: 600;
   color: rgb(49, 47, 58);
 }
 
 h2 {
-  font-family: "Inconsolata", monospace;
-  font-size: 3.7rem;
-  font-weight: 900;
+  font-family: "Raleway", sans-serif;
+  font-size: 2.8rem;
+  font-weight: 600;
   color: rgb(49, 47, 58);
 }
 
 h3 {
-  font-family: "Inconsolata", monospace;
-  font-size: 3.5rem;
+  font-family: "Raleway", sans-serif;
+  font-size: 2.4rem;
   font-weight: 600;
   color: rgb(49, 47, 58);
 }
 
 h4 {
-  font-family: "Inconsolata", monospace;
-  font-size: 2.7rem;
+  font-size: 2rem;
   font-weight: 600;
   color: rgb(49, 47, 58);
 }
@@ -48,19 +45,23 @@ body {
     /* tablet */
   }
   body h1 {
-    font: 2.6rem;
+    font: 2.4rem;
+    font-weight: 400;
   }
   body h2 {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
+    font-weight: 400;
   }
   body h3 {
-    font-size: 2.3rem;
+    font-size: 1.9rem;
+    font-weight: 400;
   }
   body h4 {
-    font-size: 2.3rem;
+    font-size: 1.7rem;
+    font-weight: 400;
   }
   body .logo {
-    font-size: 3rem;
+    font-size: 1rem;
   }
   body .container {
     margin: auto;
@@ -73,17 +74,27 @@ body {
   }
 }
 @media screen and (max-width: 350px) and (min-width: 351px) and (max-width: 990px) {
+  body h1 {
+    font-size: 2.7rem;
+    font-weight: 500;
+  }
   body h2 {
-    font-size: 3rem;
+    font-size: 2.5rem;
+    font-weight: 500;
   }
   body h3 {
-    font-size: 2.5rem;
+    font-size: 2.1rem;
+    font-weight: 500;
   }
   body h4 {
-    font-size: 2rem;
+    font-size: 1.7rem;
+    font-weight: 500;
   }
   body .container-carousel {
     width: 100%;
+  }
+  body .logo {
+    font-size: 2rem;
   }
 }
 
@@ -110,9 +121,8 @@ body {
 
 .footer {
   background-color: rgb(43, 41, 50);
-  max-height: 300px;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   justify-content: space-around;
 }
 .footer .copyright {
@@ -133,10 +143,23 @@ body {
   justify-content: space-around;
   margin: 10px auto;
 }
-.footer .redsocial-container a .redsocial-item {
+.footer .redsocial-container a .redsocial-item-facebook {
   height: 4rem;
-  background-color: rgb(255, 248, 243);
   padding: 5px;
+  border-radius: 8px;
+  background-color: rgb(48, 48, 254);
+}
+.footer .redsocial-container a .redsocial-item-instagram {
+  height: 4rem;
+  padding: 5px;
+  border-radius: 8px;
+  background-color: rgb(192, 48, 12);
+}
+.footer .redsocial-container a .redsocial-item-whatsapp {
+  height: 4rem;
+  padding: 5px;
+  border-radius: 8px;
+  background-color: rgb(30, 174, 30);
 }
 
 header .navbar .container-fluid .logo {
@@ -164,14 +187,14 @@ header .navbar .container-fluid div div .nav-link {
   width: 100%;
 }
 .container .row {
-  margin: 5px;
+  text-align: center;
 }
 .container .row .col {
   margin: auto;
   text-align: center;
 }
 .container .gallery-imagen {
-  width: 80%;
+  width: 100%;
   object-fit: cover;
   -webkit-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
@@ -182,19 +205,23 @@ header .navbar .container-fluid div div .nav-link {
 }
 
 .marcas {
-  margin: 30px auto;
+  margin: 20px auto;
   background-color: rgb(43, 41, 50);
 }
 .marcas .marcas-item {
-  margin: 20px;
-  flex: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 180px;
+  height: 100px;
+  margin: 15px auto;
+  display: flex;
 }
 .marcas .marcas-item .marca-imagen {
-  width: 270px;
+  width: 160px;
 }
 
 .damas-imagen {
-  width: 50%;
+  width: 100%;
   -webkit-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
   box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
@@ -202,7 +229,7 @@ header .navbar .container-fluid div div .nav-link {
 }
 
 .titulo-damasCaballero {
-  margin: 10px;
+  margin: 30px;
   text-align: center;
 }
 
