--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,8 +1,7 @@
 .footer{
     background-color: map-get($footer , bg-footer );
-    max-height: 300px;
     display: map-get($footer , display );
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
     justify-content: map-get($footer , justify-content );
     .copyright{
         width: 330px;
@@ -24,10 +23,24 @@
           margin: 10px auto;
           
         a{
-            .redsocial-item{
+            .redsocial-item-facebook{
                 height: 4rem;
-                background-color: map-get($footer , color );
                 padding: 5px;
+                border-radius: 8px;
+                background-color: rgb(48, 48, 254);
+                
+            }
+            .redsocial-item-instagram{
+                height: 4rem;
+                padding: 5px;
+                border-radius: 8px;
+                background-color: rgb(192, 48, 12);
+            }
+            .redsocial-item-whatsapp{
+                height: 4rem;
+                padding: 5px;
+                border-radius: 8px;
+                background-color: rgb(30, 174, 30);
             }
         }
         
