--- a/scss/components/_animaciones.scss
+++ b/scss/components/_animaciones.scss
@@ -1,4 +1,6 @@
 .animaciones{
+    width: 90%;
+    margin: 0px auto 20px auto;
     padding: 20px;
     text-align: center;
     background-color: nth($colores , 3 );
