--- a/scss/components/_galeriaImagenes.scss
+++ b/scss/components/_galeriaImagenes.scss
@@ -3,20 +3,18 @@
     width: 100%;
     .row{
         text-align: center;
+        align-items: center;
         .col{
-            margin: auto;
-            text-align: center; 
+            margin: 10px auto;
         }
     }
     .gallery-imagen {  
-        width: 100%;
+        width: 90%;
         object-fit: cover;   
         -webkit-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
         -moz-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
         box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
-        gap: 10px;
-        overflow: hidden;
-        margin: 10px;
+        
     }
 }
 
