agrege foto en nosotros

--- a/css/style.css
+++ b/css/style.css
@@ -273,9 +273,7 @@ header .navbar .container-fluid div div .nav-link {
 }
 
 .imagenNosotros {
-  -webkit-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
-  box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
