--- a/scss/components/_mainNosotros.scss
+++ b/scss/components/_mainNosotros.scss
@@ -8,7 +8,5 @@
     padding: 10px; 
 }
 .imagenNosotros{
-    -webkit-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
-        -moz-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
-        box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
+  width: 100%;
 }
