--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,16 @@
   font-size: 10px;
 }
 
+.disclaimer {
+  display: none;
+}
+
 h1 {
   font-family: "Raleway", sans-serif;
   font-size: 3rem;
   font-weight: 600;
   color: rgb(49, 47, 58);
+  text-align: center;
 }
 
 h2 {
