--- a/scss/base/_estilosGenerales.scss
+++ b/scss/base/_estilosGenerales.scss
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
 /* ---- font-family: 'Raleway', sans-serif; ---- */
 
-
-
 *{
     margin: 0;
     padding: 0;
@@ -10,12 +8,16 @@
     font-size: 10px;
 }
 
+.disclaimer {
+    display: none;
+}
 
 h1{
     font-family:'Raleway', sans-serif;
     font-size: 3rem;
     font-weight: 600;
     color: rgb(49, 47, 58);
+    text-align: center;
 }
 h2{
     font-family: 'Raleway', sans-serif;
