--- a/scss/base/_estilosGenerales.scss
+++ b/scss/base/_estilosGenerales.scss
@@ -30,6 +30,7 @@ h3{
     font-size: 2.4rem;
     font-weight: 600;
     color: rgb(49, 47, 58);
+    padding: 10px;
 }
 h4{
     
@@ -76,6 +77,10 @@ body{
     }
     .container-carousel{
         width: 100%;
+    }
+    .caja-checkbox{
+        margin: 0px;
+        padding: 0px;
     }
     
   
