--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,3 +15,4 @@
 @import "../scss/components/mainDamaBarberia";
 @import "../scss/components/mainTurnos";
 @import "../scss/components/mainNosotros";
+@import "../scss/components/formulario";
