--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ h3 {
   font-size: 2.4rem;
   font-weight: 600;
   color: rgb(49, 47, 58);
+  padding: 10px;
 }
 
 h4 {
@@ -76,6 +77,10 @@ body {
   }
   body .container-carousel {
     width: 100%;
+  }
+  body .caja-checkbox {
+    margin: 0px;
+    padding: 0px;
   }
 }
 @media screen and (max-width: 350px) and (min-width: 351px) and (max-width: 990px) {
@@ -279,6 +284,71 @@ header .navbar .container-fluid div div .nav-link {
 
 .imagenNosotros {
   width: 100%;
+}
+
+.horarios {
+  width: 80%;
+  text-align: center;
+  margin: 20px auto;
+}
+
+form {
+  width: 80%;
+  min-height: 700px;
+  border-radius: 6px;
+  background-color: rgb(43, 41, 50);
+  font-family: "Raleway", sans-serif;
+  font-size: 2rem;
+  font-weight: 800;
+  padding: 30px;
+  margin: 20px auto;
+}
+
+label {
+  /**display: flex;**/
+  display: block;
+  font-size: 1.8rem;
+  font-weight: 500;
+  color: rgb(198, 155, 123);
+}
+
+p {
+  font-size: 1.8rem;
+  color: rgb(198, 155, 123);
+  margin: 10px;
+}
+
+.datos-cliete {
+  width: 90%;
+  height: 40px;
+  padding: 10px;
+}
+
+.comentario {
+  width: 90%;
+  height: 100px;
+  padding: 10px;
+}
+
+.button {
+  width: 180px;
+  border: 1px solid black;
+  border-radius: 6px;
+  margin: 15px 2px;
+  padding: 10px;
+  background-color: rgb(198, 155, 123);
+  color: rgb(43, 41, 50);
+  font-weight: 600;
+}
+
+.caja-checkbox {
+  width: 95%;
+  margin: 25px;
+  padding: 0px 30px;
+}
+
+input {
+  border-radius: 6px;
 }
 
 /*# sourceMappingURL=style.css.map */
