--- a/scss/components/_formulario.scss
+++ b/scss/components/_formulario.scss
@@ -17,12 +17,12 @@ form{
 }
 
 label{
-    /**display: flex;**/
     display: block;
     font-size: 1.8rem;
     font-weight: 500;
     color: nth($colores, 2 );
 }
+
 p{
     font-size: 1.8rem;
     color: nth($colores, 2 );
@@ -49,12 +49,21 @@ p{
     color: nth($colores, 2 );
     font-weight: 600;
 }
+
 .caja-checkbox{
     width: 95%;
     margin: 25px; 
     padding: 0px 30px; 
-    
 }
+
 input{
     border-radius: 6px;
+    border: 2px black solid;
+}
+
+.caja-formulario{
+    border: 1px black solid;
+    -webkit-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
+        box-shadow: 37px -22px 102px -47px rgba(0, 0, 0, 0.75);
 }
