--- a/scss/base/_estilosGenerales.scss
+++ b/scss/base/_estilosGenerales.scss
@@ -43,9 +43,9 @@ h4{
 body{
     width: 100%;
     background-color: white;
+    height: 100vh;
 
   
-
     /* ----------------------------------------------- empieza MEDIA QUERIES */
 /*  mobile */
 @media screen and (max-width:350px) {
