--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ h4 {
 body {
   width: 100%;
   background-color: white;
+  height: 100vh;
   /* ----------------------------------------------- empieza MEDIA QUERIES */
   /*  mobile */
 }
