--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,9 @@ body {
   body {
     /* tablet */
   }
+  body body {
+    height: 100vh;
+  }
   body h1 {
     font: 2.4rem;
     font-weight: 400;
