--- a/scss/base/_estilosGenerales.scss
+++ b/scss/base/_estilosGenerales.scss
@@ -47,6 +47,9 @@ body{
     /* ----------------------------------------------- empieza MEDIA QUERIES */
 /*  mobile */
 @media screen and (max-width:350px) {
+    body{
+        height: 100vh;
+    }
     h1{
         font: 2.4rem;
         font-weight: 400;
