--- a/scss/base/_estilosGenerales.scss
+++ b/scss/base/_estilosGenerales.scss
@@ -1,17 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
 /* ---- font-family: 'Raleway', sans-serif; ---- */
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-size: 10px;
 }
-
 .disclaimer {
     display: none;
 }
-
 h1{
     font-family:'Raleway', sans-serif;
     font-size: 3rem;
@@ -33,23 +30,16 @@ h3{
     padding: 10px;
 }
 h4{
-    
     font-size: 2rem;
     font-weight: 600;
     color: rgb(49, 47, 58);
 }
-
-
 body{
     width: 100%;
     background-color: white;
-  
-    /* ----------------------------------------------- empieza MEDIA QUERIES */
-/*  mobile */
+    min-height: 100vh;
+
 @media screen and (max-width:350px) {
-    body{
-        height: 100vh;
-    }
     h1{
         font: 2.4rem;
         font-weight: 400;
@@ -66,7 +56,6 @@ body{
         font-size: 1.7rem;
         font-weight: 400;
     }
-
     .logo{
         font-size: 1rem;
     }
@@ -84,10 +73,7 @@ body{
         padding: 0px;
     }
     
-  
-   
 
-/* tablet */
 @media screen and (min-width:351px) and (max-width:990px) {
     h1{
         font-size: 2.7rem;
@@ -111,11 +97,6 @@ body{
     .logo{
         font-size: 2rem;
     }
-    
  }
- 
-
  }
- 
-
  }
